fixed overlap between icon sections on contact page

--- a/styles/sass/partials/_contact-styles.scss
+++ b/styles/sass/partials/_contact-styles.scss
@@ -87,7 +87,7 @@
 .contact-phone-container,
 .contact-email-container,
 .contact-address-container {
-    flex-basis: 30%;
+    flex-basis: 28%;
     position: relative;
 }
 
